# soltools-d

./: .gitignore  README.md  dub.json  meson.build
src/: main.d  meson.build
src/soltools_d/: index.d  package.d
src/soltools_d/cli/: clean.d  copy.d  index.d  initialize.d  package.d
